// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  position: relative;
}

.c1 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  max-width: 91.666667%;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-left: 1rem;
  color: #292B3E;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    body
  </div>
</div>
`;

exports[`it works with heading 1`] = `
.c0 {
  position: relative;
}

.c2 {
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  max-width: 91.666667%;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-left: 1rem;
  color: #292B3E;
}

.c1 {
  font-size: 1.875rem;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
}

<div
  class="c0"
>
  <h2
    class="c1"
  >
    heading
  </h2>
  <div
    class="c2"
  >
    body
  </div>
</div>
`;

exports[`it works with image 1`] = `
.c0 {
  border-bottom-style: solid;
  border-bottom-width: 4px;
  width: 100%;
  margin-bottom: 0.5rem;
  border-bottom-color: #fafafa;
}

<img
  alt="test"
  class="c0"
  src=""
/>
`;
